01-ingress/ingress-minikube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  -  http:
      paths:
      - path: /(.*)
        backend:
          service:
            name: carstore-web-service
            port: 
              number: 80
        pathType: Exact
